--- a/style.css
+++ b/style.css
@@ -24,24 +24,29 @@ html, body {
     background-color: var(--cor1)
     
 }
-header {
+.comeco {
     background-color: var(--cor4);
     padding-bottom: 120px;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.4);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     
 }
 
+.nome {
+    margin: -15px 0px -130px 35px;
 
-header h1 {
+}
+
+.nome h1 {
     padding-top: 50px;
-    margin: -15px 0px 0px 100px;
-    font-size: 3.5em;
+    font-size: 3em;
     font-variant: small-caps;
     font-family: var(--fonte2);
     color: var(--cor1);
 }
-header  h2 {
-    margin: -15px 0px 0px 100px;
+.nome  h2 {
     padding-top: 10px;
     font-size: 1.5em;
     text-align: left;
@@ -49,35 +54,31 @@ header  h2 {
   
 }
 
-nav > img {
-    height: 50px;
-   
-}
+
 .menu {
-    background-color:var(--cor4);
-    text-align: justify;
-    position: relative;
     display: flex;
-    gap: 40px;
-    top: 10px;
-    left: 670px;
-       
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+    padding-bottom: 0px;
+    padding-top: 75px;
+    padding-left: 20px;
+    
 }
+    
 .menu a {
-    display: inline-block; /* Garante que o padding afete o layout */
-    padding: 8px; /* Espaço ao redor da imagem */
-    padding-top: 10px;
-    box-shadow:  2px 2px 5px rgba(0, 0, 0, 0.4); /* Opcional: cria um efeito de borda externa (diferente do padding) */
+    padding: 8px;
+    padding-top: 9px;
+    box-shadow:  3px 3px 10px rgba(0, 0, 0, 0.4); 
     border-radius: 50%;
+    margin-top: 120px;
+    margin-right: 35px;
 }
 .menu img {
     height: 30px;    
 }
 .menu a:hover {
-    border: 1px solid rgba(255, 255, 255, 0.637);
-    transform: translate(-3px,-3px);
     box-shadow: 5px 5px 10px black;
-    transition: transform 0.5s;border: 1;
 }
 
 
@@ -93,18 +94,19 @@ section#identidade {
     border-radius: 10px;
 }
 section#identidade > img {
-    width: 300px;
+    min-width: 200px;
+    max-width: 300px;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     
 }
-
 .txt-id {
-    height: 100px;
+    max-height: 100px;
+    min-width: 250px;
+    max-width: 300px;
     padding-left:10px ;
 
 }
-
 
 .txt-id h1 {
     font-size: 1em;
@@ -120,18 +122,14 @@ section#identidade > img {
 }
 .txt-id p {
     font-size: 2em;
+    min-width: 250px;
+    max-width: 300px;
     padding-left: 10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .txt-id nav {
     background-color: var(--cor4);
     padding: 15px 25px; 
-    display: flex;
-    position: absolute; /* Permite posicionamento absoluto */
-    right: 0px; /* Alinha o <nav> à direita do <header> com um espaçamento de 10px */
-    top: 91.3%; /* Alinha o <nav> verticalmente ao centro do <header> */
-    transform: translateY(-50%); /* Ajusta o alinhamento vertical ao centro */
-    gap: 62.55px;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.4);
     border-bottom-right-radius: 10px;
    
