--- a/style.css
+++ b/style.css
@@ -145,3 +145,9 @@ table td {
 .txt-id hr {
     margin:  15px;
 }
+@media (max-width: 768px) {
+    .seu-container {
+        width: 100%;
+        padding: 10px;
+    }
+}
