--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ html, body {
 .menu a {
     padding: 8px;
     padding-top: 9px;
-    box-shadow:  3px 3px 10px rgba(0, 0, 0, 0.4); 
+    box-shadow:  3px 3px 10px rgba(180, 179, 179, 0.4); 
     border-radius: 50%;
     margin-top: 120px;
     margin-right: 35px;
@@ -93,61 +93,39 @@ section#identidade {
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.4);
     border-radius: 10px;
 }
+
+
 section#identidade > img {
-    min-width: 200px;
+    min-width: 0px;
     max-width: 300px;
+    min-height: 0px;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     
 }
-.txt-id {
-    max-height: 100px;
-    min-width: 250px;
-    max-width: 300px;
+
+section#identidade  h1 {
+    font-size:0.5em ;
     padding-left:10px ;
-
+    padding-top: 10px;
+}
+section#identidade  h2 {
+    font-size:1em ;
+    padding-top: 10px;
+    padding-left:10px ;
+}
+section#identidade  p{
+    font-size:0.5em ;
+    padding-left:10px ;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;   
 }
 
-.txt-id h1 {
-    font-size: 1em;
-    padding: 20px;
-    font-family:sans-serif
-}
-.txt-id h2 {
-    font-size: 3em;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: #20130a;
-    padding-left: 10px;
-    
-}
-.txt-id p {
-    font-size: 2em;
-    min-width: 250px;
-    max-width: 300px;
-    padding-left: 10px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.txt-id nav {
-    background-color: var(--cor4);
-    padding: 15px 25px; 
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.4);
-    border-bottom-right-radius: 10px;
-   
-}
-.txt-id img {
-    height: 40px;
-    
+section#identidade  td{
+    padding:10px ;
+    font-size: 0.5em;
 }
 
-table td {
-    padding: 10px;
-}
-.txt-id hr {
-    margin:  15px;
-}
-@media (max-width: 768px) {
-    .seu-container {
-        width: 100%;
-        padding: 10px;
-    }
+section#identidade hr {
+    margin: 10px;
+
 }
