--- a/style.css
+++ b/style.css
@@ -125,6 +125,9 @@ section#identidade h1{
     margin-top: 25px;
     margin-bottom: 25px;
 }
+.txt-id td {
+    font-size: 0.7em;
+}
 section#texto {
     text-align: left;
     margin: auto;
