--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ html, body {
 }
 .menu a {
     box-shadow:  4px 4px 15px rgba(2, 2, 2, 0.4); 
-    margin: 17px;
+    margin: 10px;
     padding: 15px;
     display: flex;
     justify-content: center; /* Alinha horizontalmente */
@@ -126,7 +126,7 @@ section#identidade h1{
     margin-bottom: 25px;
 }
 .txt-id td {
-    font-size: 0.7em;
+    font-size: 9px;
 }
 section#texto {
     text-align: left;
